--- a/src/components/transactions-page/transactions-page.component.html
+++ b/src/components/transactions-page/transactions-page.component.html
@@ -23,7 +23,8 @@
       } @else {
         <app-transactions-dashboard 
           [transactions]="transactions()"
-          [totalInvested]="totalInvested()" />
+          [totalInvested]="totalInvested()"
+          [portfolio]="portfolio()" />
       }
     </div>
   </div>
